# goes2go

./: .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment-test-conda.yml  environment-test.yml  environment.yml  notebooks  pyproject.toml  requirements.txt  setup.cfg  setup.py  working_on_new_GOES_class.ipynb
.github/workflows/: tests-python.yml
docs/: 404.html  404.rst  conf.py  index.html  index.rst  reference_guide.rst  remake_docs.sh
docs/_build/doctrees/: 404.doctree  environment.pickle  goes2go.doctree  index.doctree  reference_guide.doctree
docs/_build/doctrees/nbsphinx/user_guide/notebooks/: DEMO_download_goes_single_point_timerange.ipynb  DEMO_total-precipitable-water.ipynb  field-of-view_GLM_Edges.ipynb
docs/_build/doctrees/nbsphinx/user_guide/notebooks/issues/: discussion10.ipynb  issue7.ipynb
docs/_build/doctrees/reference_guide/: index.doctree  xarray.Dataset.rgb.TrueColor.doctree  xarray.Dataset.rgb.crs.doctree
docs/_build/doctrees/reference_guide/reference_guide/: xarray.Dataset.rgb.TrueColor.doctree  xarray.Dataset.rgb.crs.doctree
docs/_build/doctrees/user_guide/: DEMO_rgb_recipes.doctree  configure.doctree  contribute.doctree  defaults.doctree  examples.doctree  index.doctree
docs/_build/doctrees/user_guide/notebooks/: DEMO_derived_motion_winds.doctree  DEMO_download_goes_latest.doctree  DEMO_download_goes_nearesttime.doctree  DEMO_download_goes_timerange.doctree  DEMO_rgb_Color-IR_Overlay.doctree  DEMO_rgb_gamma-correction_NaturalColor.doctree  DEMO_rgb_recipes.doctree  DEMO_rgb_recipies copy 2.doctree  DEMO_rgb_recipies.doctree  DEMO_total-precipitable-water.doctree  Solar_Data.doctree  Untitled-1.doctree  field-of-view_ABI.doctree  field-of-view_GLM_Edges.doctree  logo.doctree  mapping_GOES16_TrueColor_Cartopy.doctree  sandbox.doctree
docs/_build/doctrees/user_guide/notebooks/issues/: 19_nearest_time_rgb.doctree  discussion10.doctree  issue4.doctree  issue5.doctree  issue7.doctree  sandbox.doctree
docs/_build/html/: .buildinfo  404.html  genindex.html  goes2go.html  index.html  objects.inv  py-modindex.html  reference_guide.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/goes2go/: accessors.html  data.html
docs/_build/html/_sources/: goes2go.rst.txt  index.rst.txt
docs/_build/html/_sources/reference_guide/: index.rst.txt
docs/_build/html/_sources/user_guide/: configure.md.txt  defaults.rst.txt  examples.md.txt  examples.rst.txt  index.rst.txt
docs/_build/html/_sources/user_guide/notebooks/: DEMO_derived_motion_winds.ipynb.txt  DEMO_total-precipitable-water.ipynb.txt
docs/_build/html/_sources/user_guide/notebooks/issues/: issue4.ipynb.txt  sandbox.ipynb.txt
docs/_build/html/_static/: brian_style.css  pygments.css
docs/_build/html/reference_guide/: index.html  xarray.Dataset.rgb.TrueColor.html  xarray.Dataset.rgb.crs.html
docs/_build/html/reference_guide/reference_guide/: xarray.Dataset.rgb.TrueColor.html  xarray.Dataset.rgb.crs.html
docs/_build/html/user_guide/: DEMO_rgb_recipes.html  configure.html  contribute.html  defaults.html  examples.html  index.html
docs/_build/html/user_guide/notebooks/: DEMO_derived_motion_winds.html  DEMO_derived_motion_winds.ipynb  DEMO_download_goes_latest.html  DEMO_download_goes_nearesttime.html  DEMO_download_goes_timerange.html  DEMO_rgb_Color-IR_Overlay.html  DEMO_rgb_gamma-correction_NaturalColor.html  DEMO_rgb_recipes.html  DEMO_rgb_recipies copy 2.html  DEMO_rgb_recipies.html  DEMO_total-precipitable-water.html  Solar_Data.html  Untitled-1.html  field-of-view_ABI.html  field-of-view_GLM_Edges.html  logo.html  mapping_GOES16_TrueColor_Cartopy.html  mapping_GOES16_TrueColor_Cartopy.ipynb  sandbox.html
docs/_build/html/user_guide/notebooks/issues/: 19_nearest_time_rgb.html  19_nearest_time_rgb.ipynb  discussion10.html  issue4.html  issue5.html  issue5.ipynb  issue7.html  sandbox.html
docs/_static/: brian_style.css  switcher.json
docs/reference_guide/: index.rst
docs/reference_guide/reference_guide/: xarray.Dataset.rgb.crs.rst
docs/user_guide/: contribute.md  defaults.md  defaults.rst  examples.md  examples.rst  index.rst
docs/user_guide/notebooks/: DEMO_derived_motion_winds.ipynb  DEMO_download_goes_latest.ipynb  DEMO_download_goes_nearesttime.ipynb  DEMO_download_goes_single_point_timerange.ipynb  DEMO_download_goes_timerange.ipynb  DEMO_rgb_Color-IR_Overlay.ipynb  DEMO_rgb_gamma-correction_NaturalColor.ipynb  DEMO_rgb_recipes_docs.ipynb  DEMO_total-precipitable-water.ipynb  GOES-19.ipynb  Solar_Data.ipynb  field-of-view_ABI.ipynb  field-of-view_GLM_Edges.ipynb  logo.ipynb  mapping_GOES16_TrueColor_Cartopy.ipynb
docs/user_guide/notebooks/issues/: 19_nearest_time_rgb.ipynb  discussion10.ipynb  issue4.ipynb  issue5.ipynb  issue7.ipynb
goes/: get.py
goes2go/: NEW.py  __init__.py  _version.py  accessors.py  data.py  debug.py  product_table.toml  product_table.txt  rgb.py  tools.py  working_on_new_GOES_class.ipynb
latlon_grids/: create_standard_GOES_latlon_grids.ipynb
notebooks/: ABI_field-of-view.ipynb  DEMO_Color-IR_Overlay.ipynb  DEMO_Gamma-Correction_NaturalColor.ipynb  DEMO_download_goes_nearesttime.ipynb  DEMO_rgb_Color-IR_Overlay.ipynb  GLM_field-of-view.ipynb  cartopy_Geostationary.ipynb  field-of-view_ABI.ipynb  field-of-view_GLM_Edges.ipynb  logo.ipynb  sandbox-2.ipynb
tests/: test_GOES.py  test_abi.py  test_data.py  test_glm.py
