[project]
name = "goes2go"
description = "Retrieve GOES-16/17 data from AWS. Also proves some RGB recipes."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
maintainers = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",

]
keywords = [
    "weather",
    "meteorology",
    "satellite",
    "atmosphere",
    "GOES",
    "xarray",
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "metpy",
    "cartopy>=0.22.0",
    "toml",
    "s3fs>=2023.6.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/blaylockbk/Herbie"
"Documentation" = "https://herbie.readthedocs.io/"
"Repository" = "https://github.com/blaylockbk/Herbie"
"Changelog" = "https://github.com/blaylockbk/Herbie/releases"
"Bug Tracker" = "https://github.com/blaylockbk/Herbie/issues"

[project.optional-dependencies]
docs = [
    "autodocsumm",
    "linkify-it-py",
    "myst-parser",
    "nbconvert",
    "nbsphinx",
    "pydata-sphinx-theme",
    "recommonmark",
    "sphinx",
    "sphinx-autosummary-accessors",
    "sphinx-design",
    "sphinx-markdown-tables",
    "sphinxcontrib-mermaid",
]

test = ["pytest", "black", "isort"]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goes2go"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "goes2go/_version.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = []
