[project]
name = "goes2go"
description = "Retrieve GOES Satellite data from AWS. Also proves some RGB recipes."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
maintainers = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "weather",
    "meteorology",
    "satellite",
    "atmosphere",
    "GOES",
    "xarray",
    "AWS",
    "NOAA",
]
dependencies = [
    "cartopy>=0.22.0",
    "h5netcdf",
    "matplotlib",
    "metpy",
    "numpy",
    "pandas",
    "s3fs>=2023.6.0",
    "toml",
    "xarray",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/blaylockbk/goes2go"
"Documentation" = "https://goes2go.readthedocs.io/"
"Repository" = "https://github.com/blaylockbk/goes2go"
"Changelog" = "https://github.com/blaylockbk/goes2go/releases"
"Bug Tracker" = "https://github.com/blaylockbk/goes2go/issues"

[project.optional-dependencies]
docs = [
    "autodocsumm",
    "linkify-it-py",
    "myst-parser",
    "nbconvert",
    "nbsphinx",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "recommonmark",
    "sphinx",
    "sphinx-autosummary-accessors",
    "sphinx-design",
    "sphinx-markdown-tables",
    "sphinxcontrib-mermaid",
]
test = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goes2go"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "goes2go/_version.py"

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D", # pydocstyle

]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = []
