[metadata]
name = goes2go
description = Retrieve GOES-16/17 data from AWS. Also proves some RGB recipes.
author = Brian K. Blaylock
author_email = blaylockbk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/blaylockbk/goes2go
project_urls =
    Source Code = https://github.com/blaylockbk/goes2go
    Documentation = https://goes2go.readthedocs.io/
    Release Notes = https://github.com/blaylockbk/goes2go/releases
    Bug Tracker = https://github.com/blaylockbk/goes2go/issues
keywords =
    meteorology
    weather
    satellite
    GOES
    atmosphere
    xarray
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pandas
    xarray
    metpy
    cartopy
    toml
    s3fs

[options.extras_require]
docs =
    autodocsumm
    linkify-it-py
    myst-parser
    nbconvert
    nbsphinx
    pydata-sphinx-theme
    recommonmark
    sphinx
    sphinx-autosummary-accessors
    sphinx-design
    sphinx-markdown-tables
    sphinxcontrib-mermaid

#tests =
#    pytest
#    black
#    isort
